# spacetraders

./: Makefile  README.md  cli.py  example.ini  mypy.ini  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: 2a5f7e680d20_add_chart_model.py  565ea3c8cf11_add_systemmappingstatusmodel.py  c1cda2f0042c_add_survey.py  d520627e2eb3_system_and_mapped_status.py  db75dc8de2cf_add_waypoint.py
src/: settings.py
src/api/: __init__.py  client.py  paths.py  utils.py
src/db/: __init__.py  base.py  base_class.py  init_db.py  session.py
src/db/models/: charts.py  surveys.py  systems.py  waypoints.py
src/logic/: main.py
src/logic/actions/: agents.py  contracts.py  explore.py  markets.py  mining.py  ships.py  surveys.py
src/schemas/: __init__.py  agent.py  contracts.py  errors.py  factions.py  generic.py  markets.py  mining.py  nav.py  ships.py  system.py  systems.py  transactions.py  waypoint.py
src/support/: datetime.py  distance.py  tables.py
src/web/: app.py  cli.py  utils.py
src/web/rf/: app.py  renderer.py
src/web/template/: base.jinja2  debug.jinja2
src/web/template/index/: agent.jinja2  base_page.jinja2  marketplace.jinja2  ship.jinja2  ships.jinja2  shipyard.jinja2  system.jinja2  waypoint.jinja2
src/web/views/: __init__.py  htmx.py  index.py
