[tool.poetry]
name = "spacetraders"
version = "0.1.0"
description = ""
authors = ["Paul Hallett <case@hey.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^23.3.0"
mypy = "^1.3.0"
ruff = "^0.0.272"
httpx = "^0.24.1"
click = "^8.1.3"
requests = "^2.31.0"
structlog = "^23.1.0"
attrs = "^23.1.0"
rich = "^13.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
